--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",              
-    "dev:turbo": "next dev --turbopack", 
+    "dev": "next dev",
+    "dev:turbo": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.18.5",
@@ -15,9 +18,11 @@
     "@prisma/client": "^6.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "multer": "^2.0.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sharp": "^0.34.2",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
@@ -32,6 +37,7 @@
     "prettier": "^3.5.3",
     "prisma": "^6.7.0",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
