--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@clerk/nextjs": "^6.18.5",
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.7.0",
+    "@prisma/extension-accelerate": "^2.0.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "multer": "^2.0.0",
