--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "prisma": {
-    "seed": "ts-node prisma/seed.ts"
-  },
+"prisma": {
+  "schema": "prisma/schema.prisma",
+  "seed": "ts-node prisma/seed.ts"
+},
   "dependencies": {
     "@clerk/nextjs": "^6.18.5",
     "@heroicons/react": "^2.2.0",
